<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/navy_blue"
        card_view:cardCornerRadius="@dimen/margin_1"
        android:layout_margin="@dimen/margin_10"
        >
        <LinearLayout
            android:weightSum="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:id="@+id/contactExhibitorRel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/event_IV"
                        android:layout_width="@dimen/margin_50"
                        android:layout_height="@dimen/margin_50"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_upcoming_event" />

                    <TextView
                        style="@style/mediumEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/event_IV"
                        android:gravity="center"
                        android:text="@string/events"
                        android:textAlignment="center" />
                </RelativeLayout>
                <View
                    android:layout_width="@dimen/margin_10"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <ImageView
                        android:id="@+id/personalise_IV"
                        android:layout_width="@dimen/margin_50"
                        android:layout_height="@dimen/margin_50"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_services" />

                    <TextView
                        style="@style/mediumEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/personalise_IV"
                        android:gravity="center"
                        android:text="@string/services"
                        android:textAlignment="center" />
                </RelativeLayout>

                <View
                    android:layout_width="@dimen/margin_10"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/b2b_IV"
                        android:layout_width="@dimen/margin_50"
                        android:layout_height="@dimen/margin_50"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_announcement" />

                    <TextView
                        style="@style/mediumEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/b2b_IV"
                        android:gravity="center"
                        android:text="@string/announcement"
                        android:textAlignment="center" />
                </RelativeLayout>
            </LinearLayout>
            <View
                android:layout_marginRight="@dimen/margin_40"
                android:layout_marginLeft="@dimen/margin_40"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:background="@android:color/darker_gray" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100"
                android:orientation="horizontal"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/exhibitor_IV"
                        android:layout_width="@dimen/margin_50"
                        android:layout_height="@dimen/margin_50"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_feedback" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/exhibitor_IV"
                        android:gravity="center"
                        android:text="@string/feedback"
                        android:textAlignment="center"
                        style="@style/mediumEditText" />
                </RelativeLayout>
                <View
                    android:layout_width="@dimen/margin_10"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent" />
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <ImageView
                        android:id="@+id/nearby_IV"
                        android:layout_width="@dimen/margin_50"
                        android:layout_height="@dimen/margin_50"
                        android:layout_centerInParent="true"
                        android:padding="5dp"
                        android:src="@drawable/ic_where_ami" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nearby_IV"
                        android:gravity="center"
                        android:text="@string/where_am"
                        android:textAlignment="center"
                        style="@style/mediumEditText" />
                </RelativeLayout>
                <View
                    android:layout_width="@dimen/margin_10"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
